2007-12-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py: fixed checkbranches command after
	changes to the get_revision() method.

2007-12-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: fixed tree_id for tarball with
	patches, as patch are tuples.

2007-12-16  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-external-deps-2.22.modules: Correct location of
	Cairo tarball.

2007-12-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/moduleset.dtd: updated DTD to match current reality,
	thanks to David Turner (Cillian64) from GHOP.

2007-12-16  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/modtypes/cmake.py:
	add CMake support.  (closes: #503890)

2007-12-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: totem-pl-parser now depends on
	evolution-data-server for camel (to parse RFC 2822 date)

2007-12-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/config.py, 
	jhbuild/defaults.jhbuildrc, jhbuild/frontends/buildscript.py,
	jhbuild/frontends/terminal.py: added no-poison and try-checkout
	options, as discussed in bug 90172, no-poison will try to build
	modules even when dependencies failed, try-checkout will force
	a checkout and autogen on failures.  (closes: #90172)

2007-12-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/defaults.jhbuildrc, 
	jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
	jhbuild/modtypes/distutils.py, jhbuild/modtypes/mesa.py,
	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
	jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py: added possibility to skip modules that
	have not been updated (with/without considering dependencies).  This
	is driven by a new build_policy configuration option, possible values
	are 'all' (default behaviour, build everything), 'updated' (build only