@@ -1,5 +1,10 @@
 2007-12-17  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/svn.py: catch errors when trying to determine
+	tree_id (may happen with aborted checkouts)
+
+2007-12-17  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/checkbranches.py: fixed checkbranches command after
 	changes to the get_revision() method.
 
